# practic

code/: 1opencv.cpp  gpio.c
examples_on_kos/mqtt_subscriber/: CMakeLists.txt  README.md
examples_on_kos/mqtt_subscriber/einit/src/: common.psl
examples_on_kos/mqtt_subscriber/env/: CMakeLists.txt
examples_on_kos/mqtt_subscriber/env/src/: env.c
examples_on_kos/mqtt_subscriber/subscriber/: CMakeLists.txt
examples_on_kos/mqtt_subscriber/subscriber/src/: subscriber.cpp
mqtt_subscriber/: SETUP.md
mqtt_subscriber/einit/: CMakeLists.txt
mqtt_subscriber/einit/src/: init.yaml.in
mqtt_subscriber/subscriber/src/: main.cpp  subscriber.h
separate_storage/resources/files/: userlist.txt
